<resources>
    <string name="app_name">TradeStuff</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Messages</string>
    <string name="title_my_things">Things</string>
    <string name="title_account">My account</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_publication">Publication</string>

    <string name="button_exit_account">Exit account</string>
    <string name="button_login_account">Login account</string>
    <string name="button_add_photo_thing">Add photo</string>
    <string name="describe_thing">Product description</string>
    <string name="name_thing">Product name</string>
    <string name="button_public_thing">Publish a product</string>
    <string name="login_or_reg">Login or registration</string>
    <string name="button_write_message">Write message</string>
    <string name="button_delete_thing">Delete</string>
    <string name="edit_text_name_of_thing_empty">The name cannot be empty</string>

    <string name="text_photo_count"> %1d / %2d</string>
</resources>